--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
+    <title>Allonsy | Value-Based Higher Education</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
@@ -24,21 +24,23 @@
       </div>
     </div>
     <div class="row expanded slide" id="slide2">
+
         <div class="row expanded">
           <div class="columns small-12"><br></div>
           <div class="columns small-12"><br></div>
           <div class="columns small-12"><br></div>
+          <div class="columns small-12">
           <div class="columns small-12 text-center">
             <h1><font color="#512DA8">About Us</font></h1>
           </div>
           <div class="columns small-12 text-center">
             <h5><font color="#727272">Allonsy is creating technology to power the value-based revolution in higher education.<br><br></font></h5>
           </div>
-          <div class="columns small-3"><br></div>
-          <div class="columns small-6">
-            <p class="text-justify"><font color="#727272">We started from a simple premise - what if universities focused on student success in the same way hospitals focus on long-term patient outcomes? Our team is developing advanced data and operating software to enable colleges and universities of all sizes to build a more effective learning environment. With Allonsy, universities will engage students and empower graduates to better outcomes.</font></p>
+          <div class="columns small-2"><br></div>
+          <div class="columns small-8">
+            <p class="text-center"><font color="#727272">We started from a simple premise - what if universities focused on student success in the same way hospitals focus on long-term patient outcomes? Our team is developing advanced data and operating software to enable colleges and universities of all sizes to build a more effective learning environment. With Allonsy, universities will engage students and empower graduates to better outcomes.</font></p>
           </div>
-          <div class="columns small-3"><br></div>
+          <div class="columns small-2"><br></div>
           <div class="columns small-12">
             <br><br>
             <p class="text-center">
@@ -47,6 +49,7 @@
           </div>
           <div class="columns small-12">
             <p class="text-center"><font color="#727272">&copy;2016 | Allonsy, Inc.</font></p>
+          </div>
           </div>
       </div>
 
