fixed font, mobile

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Allonsy | Value-Based Higher Education</title>
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
@@ -13,11 +14,9 @@
     <div class="row expanded slide">
       <div class="slidecontainer">
         <p class="text-center titletext"><font color="#512DA8">Allons</font><font color="#FFC107">y</font></p>
-        <p class="text-center"><h5>
-          <!-- <font color="#FFC107">V</font><font color="#512DA8">alue-</font><font color="#FFC107">B</font><font color="#512DA8">ased </font><font color="#FFC107">H</font><font color="#512DA8">igher </font><font color="#FFC107">E</font><font color="#512DA8">ducation.</font>
-          -->
+        <p class="text-center titlesubtext">
           <font color="#512DA8">Value-Based</font><font color="#512DA8"> Higher Education.</font>
-        </h5></p>
+        </p>
         <p class="text-center"><font color="#512DA8">Coming soon.</font></p>
           <br><br><br>
         <p class="text-center"><a href="#slide2" class="buttonylw">Learn more</a></p>
@@ -36,29 +35,31 @@
           <div class="columns small-12 text-center">
             <h5><font color="#727272">Allonsy is creating technology to power the value-based revolution in higher education.<br><br></font></h5>
           </div>
-          <div class="columns small-2"><br></div>
-          <div class="columns small-8">
-            <p class="text-center"><font color="#727272">We started from a simple premise - what if universities focused on student success in the same way hospitals focus on long-term patient outcomes? Our team is developing advanced data and operating software to enable colleges and universities of all sizes to build a more effective learning environment. With Allonsy, universities will engage students and empower graduates to better outcomes.</font></p>
+          <div class="columns small-12 large-8 small-centered">
+            <p class="text-justify"><font color="#727272">We started from a simple premise - what if universities focused on student success in the same way hospitals focus on patient outcomes? Our team is developing advanced data and operating software for colleges and universities of all sizes interested in building a more effective and engaged community. With Allonsy, universities will empower their students to achieve more, both on-campus and after graduation.</font></p>
           </div>
-          <div class="columns small-2"><br></div>
           <div class="columns small-12">
             <br><br>
             <p class="text-center">
               <h5 class="text-center"><font color="#727272">Check back soon for more information.</font></h5>
             </p>
           </div>
-          <div class="columns small-12">
-            <p class="text-center"><font color="#727272">&copy;2016 | Allonsy, Inc.</font></p>
-          </div>
           </div>
       </div>
 
+    </div>
+
+    <div class="row expanded" id="footer">
+      <div class="columns small-12">
+        <p class="text-center">&copy;2016 | Allonsy, Inc.</p>
+      </div>
     </div>
 
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
     <script src="js/vendor/foundation.js"></script>
+    <script src="js/smoothscroll.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
