--- a/index.html
+++ b/index.html
@@ -13,19 +13,27 @@
 
     <div class="row expanded slide">
       <div class="slidecontainer">
-        <p class="text-center titletext"><font color="#512DA8">Allons</font><font color="#FFC107">y</font></p>
-        <p class="text-center titlesubtext">
+        <div class="row">
+          <p class="text-center titletext"><font color="#512DA8">Allons</font><font color="#FFC107">y</font></p>
+        </div>
+        <div class="row">
+          <p class="text-center titlesubtext">
           <font color="#512DA8">Value-Based</font><font color="#512DA8"> Higher Education.</font>
         </p>
-        <p class="text-center"><font color="#512DA8">Coming soon.</font></p>
-          <br><br><br>
+        </div>
+        <div class="row">
+          <p class="text-center"><font color="#512DA8">Coming soon.</font></p>
+        </div>
+        <div class="row">
+          <div class="columns small-12 spacer">&nbsp;</div>
+        </div>
         <p class="text-center"><a href="#slide2" class="buttonylw">Learn more</a></p>
       </div>
     </div>
     <div class="row expanded slide" id="slide2">
 
         <div class="row expanded">
-          <div class="columns small-12"><br></div>
+          <div class="columns small-12"></div>
           <div class="columns small-12"><br></div>
           <div class="columns small-12"><br></div>
           <div class="columns small-12">
