fixed mobile sizing issue

--- a/index.html
+++ b/index.html
@@ -27,10 +27,36 @@
         <div class="row">
           <div class="columns small-12 spacer">&nbsp;</div>
         </div>
-        <p class="text-center"><a href="#slide2" class="buttonylw">Learn more</a></p>
+        <p class="text-center hide-for-small-only"><a href="#slide2" class="buttonylw">Learn more</a></p>
+        <p class="text-center show-for-small-only"><a href="#slide2m" class="buttonylw">Learn more</a></p>
       </div>
     </div>
-    <div class="row expanded slide" id="slide2">
+    <div class="row expanded slide hide-for-small-only" id="slide2">
+
+        <div class="row expanded">
+          <div class="columns small-12"><br></div>
+          <div class="columns small-12"><br></div>
+          <div class="columns small-12">
+          <div class="columns small-12 text-center">
+            <h1><font color="#512DA8">About Us</font></h1>
+          </div>
+          <div class="columns small-12 text-center">
+            <h5><font color="#727272">Allonsy is creating technology to power the value-based revolution in higher education.<br><br></font></h5>
+          </div>
+          <div class="columns small-12 large-8 small-centered">
+            <p class="text-justify"><font color="#727272">We started from a simple premise - what if universities focused on student success in the same way hospitals focus on patient outcomes? Our team is developing advanced data and operating software for colleges and universities of all sizes interested in building a more effective and engaged community. With Allonsy, universities will empower their students to achieve more, both on-campus and after graduation.</font></p>
+          </div>
+          <div class="columns small-12">
+            <br><br>
+            <p class="text-center">
+              <h5 class="text-center"><font color="#727272">Check back soon for more information.</font></h5>
+            </p>
+          </div>
+          </div>
+        </div>
+
+    </div>
+    <div class="row expanded slide show-for-small-only" id="slide2m">
 
         <div class="row expanded">
           <div class="columns small-12"><br></div>
