--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h5><font color="#727272">Allonsy is creating technology to power the value-based revolution in higher education.<br><br></font></h5>
           </div>
           <div class="columns small-12 large-8 small-centered">
-            <p class="text-justify"><font color="#727272">We started from a simple premise - what if universities focused on student success in the same way hospitals focus on patient outcomes? Our team is developing advanced data and operating software for colleges and universities of all sizes interested in building a more effective and engaged community. With Allonsy, universities will empower their students to achieve more, both on-campus and after graduation.</font></p>
+            <p class="text-justify"><font color="#727272">We started from a simple premise - what would a university look like if it were accountable student success in the same way hospitals are for patient outcomes? Our team is developing advanced data and operating software for colleges and universities of all sizes interested in building a more effective and engaged community. With Allonsy, universities will empower their students to achieve more, both on-campus and after graduation.</font></p>
           </div>
           <div class="columns small-12">
             <br><br>
