--- a/index.html
+++ b/index.html
@@ -46,12 +46,24 @@
           <div class="columns small-12 large-8 small-centered">
             <p class="text-justify"><font color="#727272">We started from a simple premise - what would a university look like if it were accountable student success in the same way hospitals are for patient outcomes? Our team is developing advanced data and operating software for colleges and universities of all sizes interested in building a more effective and engaged community. With Allonsy, universities will empower their students to achieve more, both on-campus and after graduation.</font></p>
           </div>
-          <div class="columns small-12">
+          <font color="#727272"><div class="columns small-12">
             <br><br>
             <p class="text-center">
-              <h5 class="text-center"><font color="#727272">Check back soon for more information.</font></h5>
+              <h5 class="text-center">Sign up to receive updates on our product and company.</h5>
             </p>
           </div>
+          <div class="row">
+          <div class="columns small-4 small-centered">
+            <form action="https://formspree.io/allonsytemp@gmail.com" method="POST">
+            <div class="input-group">
+              <input class="input-group-field" type="email" name="_replyto">
+              <div class="input-group-button">
+                <input type="submit" class="buttonylw" value="Sign up">
+              </div>
+            </div>
+            </form>
+          </div>
+          </div></font>
           </div>
         </div>
 
@@ -71,12 +83,24 @@
           <div class="columns small-12 large-8 small-centered">
             <p class="text-justify"><font color="#727272">We started from a simple premise - what if universities focused on student success in the same way hospitals focus on patient outcomes? Our team is developing advanced data and operating software for colleges and universities of all sizes interested in building a more effective and engaged community. With Allonsy, universities will empower their students to achieve more, both on-campus and after graduation.</font></p>
           </div>
-          <div class="columns small-12">
+          <font color="#727272"><div class="columns small-12">
             <br><br>
             <p class="text-center">
-              <h5 class="text-center"><font color="#727272">Check back soon for more information.</font></h5>
+              Sign up to receive updates on our product and company.
             </p>
           </div>
+          <div class="row">
+          <div class="columns small-12 small-centered">
+            <form action="https://formspree.io/allonsytemp@gmail.com" method="POST">
+            <div class="input-group">
+              <input class="input-group-field" type="email" name="_replyto">
+              <div class="input-group-button">
+                <input type="submit" class="buttonylw" value="Sign up">
+              </div>
+            </div>
+            </form>
+          </div>
+          </div></font>
           </div>
         </div>
 
