--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
           </div>
           <div class="row">
           <div class="columns small-4 small-centered">
-            <form action="https://formspree.io/allonsytemp@gmail.com" method="POST">
+            <form id="follow" action="https://formspree.io/allonsytemp@gmail.com" method="POST">
             <div class="input-group">
-              <input class="input-group-field" type="email" name="_replyto">
+              <input class="input-group-field" type="email" placeholder="Email address" name="_replyto">
               <div class="input-group-button">
-                <input type="submit" class="buttonylw" value="Sign up">
+                <!--<input type="submit" class="buttonylw" value="Sign up">-->
+                <button class="buttonylw" id="followsubmit">Sign up</button>
               </div>
             </div>
             </form>
@@ -93,7 +94,7 @@
           <div class="columns small-12 small-centered">
             <form action="https://formspree.io/allonsytemp@gmail.com" method="POST">
             <div class="input-group">
-              <input class="input-group-field" type="email" name="_replyto">
+              <input class="input-group-field" type="email" placeholder="Email address" name="_replyto">
               <div class="input-group-button">
                 <input type="submit" class="buttonylw" value="Sign up">
               </div>
