--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </div>
           <div class="row">
           <div class="columns small-4 small-centered">
-            <form id="follow" action="https://formspree.io/allonsytemp@gmail.com" method="POST">
+            <form id="follow" method="POST">
             <div class="input-group">
               <input class="input-group-field" type="email" placeholder="Email address" name="_replyto">
               <div class="input-group-button">
