--- a/index.html
+++ b/index.html
@@ -54,12 +54,11 @@
           </div>
           <div class="row">
           <div class="columns small-4 small-centered">
-            <form id="follow" method="POST">
+            <form action="https://formspree.io/allonsytemp@gmail.com" method="POST">
             <div class="input-group">
               <input class="input-group-field" type="email" placeholder="Email address" name="_replyto">
               <div class="input-group-button">
-                <!--<input type="submit" class="buttonylw" value="Sign up">-->
-                <button class="buttonylw" id="followsubmit">Sign up</button>
+                <input type="submit" class="buttonylw" value="Sign up">
               </div>
             </div>
             </form>
