Added Google apps verification

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="kNJ-h9aag3wLCX-0hYW7Z1mGDF2vZhx_DU7tbUJpyqc" />
     <title>Allonsy | Value-Based Higher Education</title>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     <link rel="stylesheet" href="css/foundation.css">
