--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             <h5><font color="#727272">Allonsy is creating technology to power the value-based revolution in higher education.<br><br></font></h5>
           </div>
           <div class="columns small-12 large-8 small-centered">
-            <p class="text-justify"><font color="#727272">We started from a simple premise - what would a university look like if it were accountable student success in the same way hospitals are for patient outcomes? Our team is developing advanced data and operating software for colleges and universities of all sizes interested in building a more effective and engaged community. With Allonsy, universities will empower their students to achieve more, both on-campus and after graduation.</font></p>
+            <p class="text-justify"><font color="#727272">Allonsy started with a simple premise: What if the digital strategies revolutionizing value-based healthcare were deployed in higher education? What if colleges and universities leveraged existing data sources to increase operational efficiency, demonstrate institutional value, and, above all, improve student outcomes? </font></p>
+            <p class="text-justify"><font color="#727272">Our team is developing advanced analytics, data management and operating software for institutions of all sizes interested in building a more effective and engaged community. With Allonsy, colleges and universities will gain improved visibility into the factors that drive institutional performance and empower their students to achieve more, both on-campus and after graduation.</font></p>
           </div>
           <font color="#727272"><div class="columns small-12">
             <br><br>
@@ -81,7 +82,8 @@
             <h5><font color="#727272">Allonsy is creating technology to power the value-based revolution in higher education.<br><br></font></h5>
           </div>
           <div class="columns small-12 large-8 small-centered">
-            <p class="text-justify"><font color="#727272">We started from a simple premise - what if universities focused on student success in the same way hospitals focus on patient outcomes? Our team is developing advanced data and operating software for colleges and universities of all sizes interested in building a more effective and engaged community. With Allonsy, universities will empower their students to achieve more, both on-campus and after graduation.</font></p>
+            <p class="text-justify"><font color="#727272">Allonsy started with a simple premise: What if the digital strategies revolutionizing value-based healthcare were deployed in higher education? What if colleges and universities leveraged existing data sources to increase operational efficiency, demonstrate institutional value, and, above all, improve student outcomes? </font></p>
+            <p class="text-justify"><font color="#727272">Our team is developing advanced analytics, data management and operating software for institutions of all sizes interested in building a more effective and engaged community. With Allonsy, colleges and universities will gain improved visibility into the factors that drive institutional performance and empower their students to achieve more, both on-campus and after graduation.</font></p>
           </div>
           <font color="#727272"><div class="columns small-12">
             <br><br>
