--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
 
-    <div class="row expanded slide">
+    <div class="row expanded slide-cover">
       <div class="slidecontainer">
         <div class="row">
           <p class="text-center titletext"><font color="#512DA8">Allons</font><font color="#FFC107">y</font></p>
@@ -32,7 +32,7 @@
         <p class="text-center show-for-small-only"><a href="#slide2m" class="buttonylw">Learn more</a></p>
       </div>
     </div>
-    <div class="row expanded slide hide-for-small-only" id="slide2">
+    <div class="row expanded slide-body hide-for-small-only" id="slide2">
 
         <div class="row expanded">
           <div class="columns small-12"><br></div>
@@ -48,24 +48,29 @@
             <p class="text-justify"><font color="#727272">We started with a simple premise: What if the digital strategies revolutionizing value-based healthcare could be transported to higher education? What if existing data could be used to increase efficiency, demonstrate value, and improve student outcomes? </font></p>
             <p class="text-justify"><font color="#727272">Our team is developing advanced analytics and operating software for higher education institutions of all sizes. With Allonsy, colleges and universities will gain improved visibility into the factors that drive institutional performance and empower their students to achieve more - both on-campus and after graduation.</font></p>
           </div>
-          <font color="#727272"><div class="columns small-12">
+          <div class="columns small-12"><font color="#727272">
             <br><br>
             <p class="text-center">
               <h5 class="text-center">Sign up to receive updates on our product and company.</h5>
             </p>
+          </font>
           </div>
           <div class="row">
           <div class="columns small-4 small-centered">
             <form action="https://formspree.io/allonsytemp@gmail.com" method="POST">
             <div class="input-group">
+              <font color="#727272">
               <input class="input-group-field" type="email" placeholder="Email address" name="_replyto">
+              </font>
               <div class="input-group-button">
+                <font color="#727272">
                 <input type="submit" class="buttonylw" value="Sign up">
+                </font>
               </div>
             </div>
             </form>
           </div>
-          </div></font>
+          </div>
           </div>
         </div>
 
@@ -86,25 +91,31 @@
             <p class="text-justify"><font color="#727272">We started with a simple premise: What if the digital strategies revolutionizing value-based healthcare could be transported to higher education? What if existing data could be used to increase efficiency, demonstrate value, and improve student outcomes? </font></p>
             <p class="text-justify"><font color="#727272">Our team is developing advanced analytics and operating software for higher education institutions of all sizes. With Allonsy, colleges and universities will gain improved visibility into the factors that drive institutional performance and empower their students to achieve more - both on-campus and after graduation.</font></p>
           </div>
-          <font color="#727272"><div class="columns small-12">
+          <div class="columns small-12"><font color="#727272">
             <br><br>
             <p class="text-center">
               Sign up to receive updates on our product and company.
             </p>
+          </font>
           </div>
           <div class="row">
           <div class="columns small-12 small-centered">
             <form action="https://formspree.io/allonsytemp@gmail.com" method="POST">
             <div class="input-group">
+              <font color="#727272">
               <input class="input-group-field" type="email" placeholder="Email address" name="_replyto">
+              </font>
               <div class="input-group-button">
+                <font color="#727272">
                 <input type="submit" class="buttonylw" value="Sign up">
+                </font>
               </div>
             </div>
             </form>
           </div>
-          </div></font>
           </div>
+        </div>
+
         </div>
 
     </div>
@@ -114,7 +125,6 @@
         <p class="text-center">&copy;2016 | Allonsy, Inc.</p>
       </div>
     </div>
-
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
