--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </div>
           <div class="columns small-12 large-8 small-centered">
             <p class="text-justify"><font color="#727272">We started with a simple premise: What if the digital strategies revolutionizing value-based healthcare could be transported to higher education? What if existing data could be used to increase efficiency, demonstrate value, and improve student outcomes? </font></p>
-            <p class="text-justify"><font color="#727272">Our team is developing advanced analytics and operating software for higher education institutions of all sizes. With Allonsy, colleges and universities improve visibility into institutional performance and empower students to achieve more - both on-campus and after graduation.</font></p>
+            <p class="text-justify"><font color="#727272">Our team is developing advanced analytics and operating software for higher education institutions of all sizes. With Allonsy, colleges and universities will improve visibility into institutional performance and empower students to achieve more - both on-campus and after graduation.</font></p>
           </div>
           <div class="columns small-12"><font color="#727272">
             <br><br>
