--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <h5><font color="#727272">Allonsy is creating technology to power the value-based revolution in higher education.<br><br></font></h5>
           </div>
           <div class="columns small-12 large-8 small-centered">
-            <p class="text-justify"><font color="#727272">We started with a simple premise: What if the data generate by everyday activities in higher education could be used to increase administrative efficiency, demonstrate institutional value, and improve student outcomes? </font></p>
-            <p class="text-justify"><font color="#727272">Our team is developing advanced analytics and operating software for higher education institutions of all sizes. With Allonsy, colleges and universities will improve visibility into institutional performance and empower students to achieve more - both on-campus and after graduation.</font></p>
+            <p class="text-justify"><font color="#727272">We started with a simple premise: What if colleges and universities could efficiently capture and utilize data to increase administrative efficiency, demonstrate institutional value, and improve student outcomes? </font></p>
+            <p class="text-justify"><font color="#727272">Our team is developing advanced analytics and enterprise software solutions for higher education institutions of all sizes. With Allonsy, colleges and universities will be able to improve institutional performance and empower students to achieve more - both on-campus and after graduation.</font></p>
           </div>
           <div class="columns small-12"><font color="#727272">
             <br><br>
